fixing some spacing bugs

--- a/styles/form-card.css
+++ b/styles/form-card.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding: 5rem;
 }
 
 .heading-img-wrapper{
@@ -25,6 +26,8 @@
     margin-left: var(--size-xl);
     margin-right: var(--size-xl);
     position: relative;
+    padding: 1rem;
+    min-height: 30vh;
 }
 
 .description{
@@ -172,8 +175,6 @@
 @media (min-width: 1024px) {
     body{
         background-color: var(--clr-darkSlateGrey);
-        margin: 0;
-        padding: 0;
         display: flex;
         justify-content: center;
         align-items: center; 
@@ -182,7 +183,7 @@
         display:grid;
         grid-template-columns: 1fr 1fr ;
         gap: 1.5rem;
-        padding: 1rem;
+        padding: 4rem;
         justify-content: center;
         align-items: center;
         background-color: var(--clr-white);
@@ -196,7 +197,6 @@
         background-size:cover;
         background-repeat: no-repeat;
         order: 2;
-        background-color: red;
     }
     .heading-title{
         font-size: var(--size-4xl);
@@ -249,7 +249,7 @@
     .subscription-card{
         flex-direction: row-reverse;
         gap: 1.5rem;
-        padding: 1rem;
+        padding: 4rem 1rem;
         justify-content: center;
         align-items: center;
         background-color: var(--clr-white);
